# wander

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
tests/: test_render.py  test_shell.py
tests/example_data/: example.md
wander/: __init__.py  models.py  parse.py  render.py  run_command.py  test.md  utils.py
wander/data/: example.md
wander/plugins/: __init__.py  clipboard.py  shell.py
