[tool.poetry]
name = "wander"
version = "0.1.0"
description = ""
authors = ["engkheng <ongengkheng929@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pydantic = "^1.10.7"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
